load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "p2p",
    srcs = [
        "config.go",
        "config_toml.go",
        "dial.go",
        "message.go",
        "metrics.go",
        "peer.go",
        "peer_error.go",
        "protocol.go",
        "server.go",
        "server_nat.go",
        "transport.go",
        "util.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/p2p",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum/common",
        "//go-ethereum/common/bitutil",
        "//go-ethereum/common/mclock",
        "//go-ethereum/crypto",
        "//go-ethereum/event",
        "//go-ethereum/log",
        "//go-ethereum/metrics",
        "//go-ethereum/p2p/discover",
        "//go-ethereum/p2p/enode",
        "//go-ethereum/p2p/enr",
        "//go-ethereum/p2p/nat",
        "//go-ethereum/p2p/netutil",
        "//go-ethereum/p2p/rlpx",
        "//go-ethereum/rlp",
    ],
)

go_test(
    name = "p2p_test",
    srcs = [
        "dial_test.go",
        "message_test.go",
        "peer_test.go",
        "server_nat_test.go",
        "server_test.go",
        "transport_test.go",
        "util_test.go",
    ],
    embed = [":p2p"],
    deps = [
        "//go-ethereum/common/mclock",
        "//go-ethereum/crypto",
        "//go-ethereum/internal/testlog",
        "//go-ethereum/log",
        "//go-ethereum/p2p/enode",
        "//go-ethereum/p2p/enr",
        "//go-ethereum/p2p/netutil",
        "//go-ethereum/p2p/pipes",
        "//go-ethereum/p2p/rlpx",
        "@com_github_davecgh_go_spew//spew",
    ],
)
