load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "params",
    srcs = [
        "bootnodes.go",
        "config.go",
        "config_arbitrum.go",
        "dao.go",
        "denomination.go",
        "network_params.go",
        "protocol_params.go",
        "verkle_params.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/params",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum/common",
        "//go-ethereum/params/forks",
    ],
)

go_test(
    name = "params_test",
    srcs = ["config_test.go"],
    embed = [":params"],
    deps = ["@com_github_stretchr_testify//require"],
)
