load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "rlp",
    srcs = [
        "decode.go",
        "doc.go",
        "encbuffer.go",
        "encode.go",
        "iterator.go",
        "raw.go",
        "typecache.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/rlp",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum/common/math",
        "//go-ethereum/rlp/internal/rlpstruct",
        "@com_github_holiman_uint256//:uint256",
    ],
)

go_test(
    name = "rlp_test",
    srcs = [
        "decode_tail_test.go",
        "decode_test.go",
        "encbuffer_example_test.go",
        "encode_test.go",
        "encoder_example_test.go",
        "iterator_test.go",
        "raw_test.go",
    ],
    embed = [":rlp"],
    deps = [
        "//go-ethereum/common/hexutil",
        "//go-ethereum/common/math",
        "@com_github_holiman_uint256//:uint256",
    ],
)
