load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "tests",
    srcs = [
        "block_test_util.go",
        "difficulty_test_util.go",
        "gen_btheader.go",
        "gen_difficultytest.go",
        "gen_stauthorization.go",
        "gen_stenv.go",
        "gen_sttransaction.go",
        "init.go",
        "rlp_test_util.go",
        "state_test_util.go",
        "transaction_test_util.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/tests",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum/arbcrypto",
        "//go-ethereum/arbitrum/multigas",
        "//go-ethereum/common",
        "//go-ethereum/common/hexutil",
        "//go-ethereum/common/math",
        "//go-ethereum/consensus",
        "//go-ethereum/consensus/beacon",
        "//go-ethereum/consensus/ethash",
        "//go-ethereum/consensus/misc/eip4844",
        "//go-ethereum/core",
        "//go-ethereum/core/rawdb",
        "//go-ethereum/core/state",
        "//go-ethereum/core/state/snapshot",
        "//go-ethereum/core/tracing",
        "//go-ethereum/core/types",
        "//go-ethereum/core/vm",
        "//go-ethereum/crypto",
        "//go-ethereum/ethdb",
        "//go-ethereum/log",
        "//go-ethereum/params",
        "//go-ethereum/rlp",
        "//go-ethereum/triedb",
        "//go-ethereum/triedb/hashdb",
        "//go-ethereum/triedb/pathdb",
        "@com_github_holiman_uint256//:uint256",
    ],
)

go_test(
    name = "tests_test",
    srcs = [
        "block_test.go",
        "difficulty_test.go",
        "init_test.go",
        "rlp_test.go",
        "state_test.go",
        "transaction_test.go",
    ],
    embed = [":tests"],
    deps = [
        "//go-ethereum/common",
        "//go-ethereum/core",
        "//go-ethereum/core/rawdb",
        "//go-ethereum/core/types",
        "//go-ethereum/core/vm",
        "//go-ethereum/eth/tracers/logger",
        "//go-ethereum/params",
        "@com_github_holiman_uint256//:uint256",
    ],
)
