load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "trie",
    srcs = [
        "bytepool.go",
        "committer.go",
        "encoding.go",
        "errors.go",
        "hasher.go",
        "iterator.go",
        "list_hasher.go",
        "node.go",
        "node_enc.go",
        "proof.go",
        "secure_trie.go",
        "stacktrie.go",
        "sync.go",
        "tracer.go",
        "transition.go",
        "trie.go",
        "trie_id.go",
        "trie_reader.go",
        "verkle.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/trie",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum/common",
        "//go-ethereum/common/hexutil",
        "//go-ethereum/common/prque",
        "//go-ethereum/core/rawdb",
        "//go-ethereum/core/types",
        "//go-ethereum/crypto",
        "//go-ethereum/ethdb",
        "//go-ethereum/log",
        "//go-ethereum/metrics",
        "//go-ethereum/rlp",
        "//go-ethereum/trie/trienode",
        "//go-ethereum/trie/utils",
        "//go-ethereum/triedb/database",
        "@com_github_ethereum_go_verkle//:go-verkle",
        "@com_github_holiman_uint256//:uint256",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "trie_test",
    srcs = [
        "database_test.go",
        "encoding_test.go",
        "iterator_test.go",
        "node_test.go",
        "proof_test.go",
        "secure_trie_test.go",
        "stacktrie_fuzzer_test.go",
        "stacktrie_test.go",
        "sync_test.go",
        "tracer_test.go",
        "trie_test.go",
        "verkle_test.go",
    ],
    embed = [":trie"],
    deps = [
        "//go-ethereum/arbcrypto",
        "//go-ethereum/common",
        "//go-ethereum/core/rawdb",
        "//go-ethereum/core/types",
        "//go-ethereum/crypto",
        "//go-ethereum/ethdb",
        "//go-ethereum/ethdb/memorydb",
        "//go-ethereum/internal/testrand",
        "//go-ethereum/rlp",
        "//go-ethereum/trie/trienode",
        "//go-ethereum/trie/utils",
        "//go-ethereum/triedb/database",
        "@com_github_davecgh_go_spew//spew",
        "@com_github_holiman_uint256//:uint256",
        "@com_github_stretchr_testify//assert",
    ],
)
