load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "triedb",
    srcs = [
        "database.go",
        "history.go",
        "preimages.go",
        "states.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/triedb",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum/common",
        "//go-ethereum/core/rawdb",
        "//go-ethereum/ethdb",
        "//go-ethereum/log",
        "//go-ethereum/trie/trienode",
        "//go-ethereum/triedb/database",
        "//go-ethereum/triedb/hashdb",
        "//go-ethereum/triedb/pathdb",
    ],
)

go_test(
    name = "triedb_test",
    srcs = ["preimages_test.go"],
    embed = [":triedb"],
    deps = [
        "//go-ethereum/common",
        "//go-ethereum/core/rawdb",
        "//go-ethereum/triedb/hashdb",
    ],
)
