load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "keystore",
    srcs = [
        "account_cache.go",
        "file_cache.go",
        "key.go",
        "keystore.go",
        "passphrase.go",
        "plain.go",
        "presale.go",
        "wallet.go",
        "watch.go",
        "watch_fallback.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/accounts/keystore",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum",
        "//go-ethereum/accounts",
        "//go-ethereum/common",
        "//go-ethereum/common/math",
        "//go-ethereum/core/types",
        "//go-ethereum/crypto",
        "//go-ethereum/event",
        "//go-ethereum/log",
        "@com_github_deckarep_golang_set_v2//:golang-set",
        "@com_github_google_uuid//:uuid",
        "@org_golang_x_crypto//pbkdf2",
        "@org_golang_x_crypto//scrypt",
    ] + select({
        "@rules_go//go/platform:android_386": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:android_amd64": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:android_arm": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:darwin_386": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:darwin_amd64": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:darwin_arm": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:darwin_arm64": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:freebsd_386": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:freebsd_amd64": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:freebsd_arm": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:freebsd_arm64": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:linux_386": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:linux_amd64": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:linux_arm": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:linux_mips": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:linux_mips64": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:linux_mips64le": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:linux_mipsle": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:linux_ppc64": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:linux_ppc64le": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:linux_riscv64": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:linux_s390x": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:netbsd_386": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:netbsd_amd64": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:netbsd_arm": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:netbsd_arm64": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "@rules_go//go/platform:solaris_amd64": [
            "@com_github_fsnotify_fsnotify//:fsnotify",
        ],
        "//conditions:default": [],
    }),
)

go_test(
    name = "keystore_test",
    srcs = [
        "account_cache_test.go",
        "keystore_fuzzing_test.go",
        "keystore_test.go",
        "passphrase_test.go",
        "plain_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":keystore"],
    deps = [
        "//go-ethereum/accounts",
        "//go-ethereum/common",
        "//go-ethereum/crypto",
        "//go-ethereum/event",
        "@com_github_cespare_cp//:cp",
        "@com_github_davecgh_go_spew//spew",
    ],
)
