load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "usbwallet",
    srcs = [
        "hub.go",
        "ledger.go",
        "trezor.go",
        "wallet.go",
    ],
    importpath = "github.com/ethereum/go-ethereum/accounts/usbwallet",
    visibility = ["//visibility:public"],
    deps = [
        "//go-ethereum",
        "//go-ethereum/accounts",
        "//go-ethereum/accounts/usbwallet/trezor",
        "//go-ethereum/common",
        "//go-ethereum/common/hexutil",
        "//go-ethereum/core/types",
        "//go-ethereum/crypto",
        "//go-ethereum/event",
        "//go-ethereum/log",
        "//go-ethereum/rlp",
        "@com_github_karalabe_hid//:hid",
        "@org_golang_google_protobuf//proto",
    ],
)
